openeuler-0606/report/CancerInSilico/raw-results/kunpeng2/buildsrc-out.txt
##############################################################################
##############################################################################
###
### Running command:
###
###   /home/biocbuild/R/R-4.3.0/bin/R CMD build --keep-empty-dirs --no-resave-data CancerInSilico
###
##############################################################################
##############################################################################


* checking for file ‘CancerInSilico/DESCRIPTION’ ... OK
* preparing ‘CancerInSilico’:
* checking DESCRIPTION meta-information ... OK
* cleaning src
* installing the package to build vignettes
      -----------------------------------
* installing *source* package ‘CancerInSilico’ ...
** using staged installation
** libs
using C++ compiler: ‘g++ (GCC) 10.3.1’
g++ -std=gnu++17 -I"/home/biocbuild/R/R-4.3.0/include" -DNDEBUG  -I'/home/biocbuild/R/R-4.3.0/site-library/Rcpp/include' -I'/home/biocbuild/R/R-4.3.0/library/BH/include' -I/usr/local/include    -fPIC  -g -O2  -c RunModel.cpp -o RunModel.o
In file included from CellModels/../OffLatticeModel/OffLatticeCellBasedModel.h:8,
                 from CellModels/DrasdoHohmeModel.h:7,
                 from RunModel.cpp:4:
CellModels/../OffLatticeModel/OffLatticeCell.h: In member function ‘PointPair OffLatticeCell::centers() const’:
CellModels/../OffLatticeModel/OffLatticeCell.h:72:31: note: parameter passing for argument of type ‘std::pair<Point<double>, Point<double> >’ when C++17 is enabled changed to match C++14 in GCC 10.1
   72 |     PointPair centers() const {return mCenters;}
      |                               ^
g++ -std=gnu++17 -I"/home/biocbuild/R/R-4.3.0/include" -DNDEBUG  -I'/home/biocbuild/R/R-4.3.0/site-library/Rcpp/include' -I'/home/biocbuild/R/R-4.3.0/library/BH/include' -I/usr/local/include    -fPIC  -g -O2  -c RcppExports.cpp -o RcppExports.o
g++ -std=gnu++17 -I"/home/biocbuild/R/R-4.3.0/include" -DNDEBUG  -I'/home/biocbuild/R/R-4.3.0/site-library/Rcpp/include' -I'/home/biocbuild/R/R-4.3.0/library/BH/include' -I/usr/local/include    -fPIC  -g -O2  -c test-runner.cpp -o test-runner.o
In file included from test-runner.cpp:2:
Tests/catch.h:6473:41: error: array bound is not an integer constant before ‘]’ token
 6473 |         static char altStackMem[SIGSTKSZ];
      |                                         ^
Tests/catch.h: In constructor ‘Catch::FatalConditionHandler::FatalConditionHandler()’:
Tests/catch.h:6492:30: error: ‘altStackMem’ was not declared in this scope
 6492 |             sigStack.ss_sp = altStackMem;
      |                              ^~~~~~~~~~~
Tests/catch.h: At global scope:
Tests/catch.h:6524:53: error: array bound is not an integer constant before ‘]’ token
 6524 |     char FatalConditionHandler::altStackMem[SIGSTKSZ] = {};
      |                                                     ^
make: *** [/home/biocbuild/R/R-4.3.0/etc/Makeconf:200: test-runner.o] Error 1
ERROR: compilation failed for package ‘CancerInSilico’
* removing ‘/tmp/RtmpyLLMLC/Rinst341523e9ada/CancerInSilico’
      -----------------------------------
ERROR: package installation failed
